# odp

./: configure.ac
example/traffic_mgmt/: .gitignore  odp_traffic_mgmt.c
helper/: odph_pause.h
include/: odp.h
include/odp/api/: packet_flags.h  traffic_mngr.h
platform/linux-generic/: Makefile.am  odp_init.c  odp_name_table.c  odp_packet_flags.c  odp_pkt_queue.c  odp_sorted_list.c  odp_timer_wheel.c  odp_traffic_mngr.c
platform/linux-generic/include/: odp_internal.h  odp_name_table_internal.h  odp_packet_internal.h  odp_pkt_queue_internal.h  odp_sorted_list_internal.h  odp_timer_wheel_internal.h
platform/linux-generic/include/odp/plat/: packet_types.h  traffic_mngr_types.h
test/validation/: Makefile.am
test/validation/traffic_mngr/: .gitignore  Makefile.am  traffic_mngr.c  traffic_mngr.h
