ODP_MODULES = buffer \
	      classification \
	      cpumask \
	      crypto \
	      errno \
	      init \
	      queue \
	      packet \
	      pktio \
	      pool \
	      random \
	      scheduler \
	      synchronizers \
	      thread \
	      time \
	      timer \
	      traffic_mngr \
	      shmem \
	      system

SUBDIRS = common $(ODP_MODULES)
